2010-09-02  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_pthread_redirects.h (GC_pthread_sigmask, GC_dlopen,
	pthread_sigmask, dlopen): Don't define for Win32 pthreads (and
	don't include signal.h and dlfcn.h).

2010-08-25  Ivan Maidanski <ivmai@mail.ru> (with help from Hans Boehm)

	* dyn_load.c (GC_register_dynlib_callback): Add FIXME.

2010-08-18  Ivan Maidanski <ivmai@mail.ru> (really Andreas Tobler)

	* include/private/gcconfig.h: Add support for FreeBSD on ppc64.

2010-08-18  Ivan Maidanski <ivmai@mail.ru> (with help from Andreas Tobler)

	* os_dep.c (PROTECT, UNPROTECT): Correct VM_PROT_EXEC to
	VM_PROT_EXECUTE.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.67,
	automake-1.11.1 and libtool-2.2.8).
	* configure: Ditto.
	* ltmain.sh: Ditto.
	* Makefile.in: Ditto.
	* include/private/config.h.in: Ditto.
	* m4/libtool.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltversion.m4: Ditto.
	* m4/lt~obsolete.m4: Ditto.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (os2_alloc): Don't set PAG_EXECUTE unless
	pages_executable is on.
	* os_dep.c (os2_alloc): Add FIXME (for recursion).
	* os_dep.c (UNPROTECT): Abort with a more informative message if
	pages_executable is on ("mprotect" case).
	* os_dep.c (PROTECT, UNPROTECT): Set VM_PROT_EXEC if
	pages_executable is on (Darwin case).
	* pthread_support.c (GC_init_real_syms): Abort with an informative
	message if libgc is linked after libpthread.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (GC_register_dynlib_callback): Adjust "start" pointer
	for 64-bit targets.
	* pthread_support.c (start_mark_threads): Expand PTHREAD_CREATE
	macro.
	* pthread_support.c (start_mark_threads): Call INIT_REAL_SYMS()
	since REAL(pthread_create) is used.
	* pthread_support.c (PTHREAD_CREATE): Remove unused.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* extra/threadlibs.c (main): Remove --wrap for "read" (since not
	wrapped anymore).