@@ -1,3 +1,13 @@
+2010-09-03  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README.macros (DARWIN_DONT_PARSE_STACK): Fix a typo.
+	* darwin_stop_world.c (GC_use_mach_handler_thread): Change type
+	to GC_bool.
+	* darwin_stop_world.c (GC_suspend_thread_list, GC_start_world):
+	Simplify the expressions involving GC_use_mach_handler_thread.
+	* darwin_stop_world.c (GC_darwin_register_mach_handler_thread):
+	Initialize GC_use_mach_handler_thread to TRUE (instead of 1).
+
 2010-09-02  Ivan Maidanski <ivmai@mail.ru>
 
 	* include/gc_pthread_redirects.h (GC_pthread_sigmask, GC_dlopen,
@@ -78,7 +88,7 @@
 	Declare new types if needed.
 	* pthread_support.c (GC_pthread_cancel, GC_pthread_exit): New
 	function definition (only if GC_PTHREAD_EXIT_ATTRIBUTE).
-	* pthread_support.c (GC_init_real_syms): Initialise pointers to
+	* pthread_support.c (GC_init_real_syms): Initialize pointers to
 	the "real" pthread_cancel and pthread_exit (only if
 	GC_PTHREAD_EXIT_ATTRIBUTE).
 	* pthread_support.c (GC_unregister_my_thread): Enable collections
@@ -272,7 +282,7 @@
 
 2010-03-23  Ivan Maidanski <ivmai@mail.ru> (really Dave Korn)
 
-	* Makefile.am (check_LTLIBRARIES): Initialise to empty.
+	* Makefile.am (check_LTLIBRARIES): Initialize to empty.
 	* tests/tests.am (TESTS, check_PROGRAMS): Add staticrootstest.
 	* tests/tests.am (staticrootstest_SOURCES, staticrootstest_LDADD,
 	libstaticrootslib_la_SOURCES, libstaticrootslib_la_LIBADD,
